--- a/tutudaka/.gitignore
+++ b/tutudaka/.gitignore
@@ -23,6 +23,7 @@
 # misc
 .DS_Store
 *.pem
+.local-data.json
 
 # debug
 npm-debug.log*
@@ -31,7 +32,13 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*
+!.env.example
 
 # vercel
 .vercel
